[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "epr-python"
version = "0.1.0"
description = "A Python Client for Event Provenance Registry (EPR)"
readme = "README.md"
requires-python = ">= 3.9"
license.file = "LICENSE"
authors = [
  { name = "Brett Smith", email = "xbcsmith@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "urllib3",
  "jsonpath-ng",
]

[project.scripts]
eprcli = "epr.main:main"

[project.urls]
"Homepage" = "https://github.com/xbcsmith/epr-python"
